--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p><iframe width="560" height="315" src="https://www.youtube.com/embed/Gi7QZSq-KxI" frameborder="0" allowfullscreen></iframe></p>
+<p><iframe width="560" height="315" src="https://www.youtube.com/embed/OXWrjWDQh7Q?&autoplay=1" frameborder="0" allowfullscreen></iframe></iframe></p>
 <p>I'm hosted with GitHub Pages.</p>
+<p>금강대학교 행정학과</p>
+<p>김근하입니다~</p>
 <p>Very~ Nice Very Very Nice~</p>
 </body>
 </html>
